Testing: aligning stop and pause

--- a/main.css
+++ b/main.css
@@ -139,17 +139,21 @@ summary of changes:
   /* float the buttons to the opposite sides within the wrappers */
 
   .half-box.stop-button-wrapper {
+    position: relative;
+    width: 45%;
     float: left;
     text-align: left;
     border: 1px solid black;
   }
   .half-box.pause-button-wrapper {
+    position: relative;
+    width: 45%;
     float: right;
     text-align: right;
     border: 1px solid black;
   }
-  .half-box.stop-button-wrapper > a { font-size: 18px; }
-  .half-box.pause-button-wrapper > a { font-size: 18px; }
+  .half-box.stop-button-wrapper > a { font-size: 24px; }
+  .half-box.pause-button-wrapper > a { font-size: 24px; }
 
   .generic-box {
     margin: auto;
